Update 오늘의 공부0712 - 파이썬 클래스.ipynb

--- a/오늘의 공부0712 - 파이썬 클래스.ipynb
+++ b/오늘의 공부0712 - 파이썬 클래스.ipynb
@@ -198,9 +198,53 @@
     "\n",
     "**class Cat(Pet):**\n",
     ">**def__init__:**\n",
-    ">>**코드2**\n",
+    ">>**코드2**<br><br>\n",
+    "<br><br>\n",
     "\n",
+    "상속을 하게 될 시 가장 큰 장점은 자식 클래스를 만들었을 때 부모 클래스의 속성과 메소드를 사용할 수 있다는 점이다.\n",
+    "중복되는 클래스가 많을 때 상속을 이용해 나눠서 관리를 함으로써 유지,관리에도 유용하게 쓸 수 있다.\n",
+    "<br><br>\n",
+    "<br><br>\n",
+    "### 예외처리\n",
+    "<br><br>\n",
+    ">##### 예외처리가 필요한 이유\n",
+    ">> 프로그램에 오류가 발생하거나 발생하지 않았을 때에 대한 처리를 해줘야 프로그램이 유연하게 돌아갈 수 있다.\n",
+    "<br><br>\n",
+    ">##### 예외처리문의 종류\n",
+    ">###### 모든에러처리\n",
+    ">> try:<br><br>\n",
+    ">><예외 발생가능 코드><br><br>\n",
+    ">>except:<br><br>\n",
+    ">><예외 발생시 수행되는 코드>\n",
+    "<br><br>\n",
     "\n",
+    ">###### 특정에러처리\n",
+    ">> try:<br><br>\n",
+    ">><예외 발생가능 코드><br><br>\n",
+    ">>except <발생 에러>:<br><br>\n",
+    ">><예외 발생시 수행되는 코드>\n",
+    "<br><br>\n",
+    "except문에서 \"<발생에러> as 변수\" 형태를 통해 발생한 에러를 변수형태로 저장하여 print등에 이용할 수 있다.\n",
+    "<br><br>\n",
+    "\n",
+    ">###### 에러처리 및 에러가 발생하지 않는 경우\n",
+    ">> try:<br><br>\n",
+    ">><예외 발생가능 코드><br><br>\n",
+    ">>except:<br><br>\n",
+    ">><예외 발생시 수행되는 코드><br><br>\n",
+    ">>else:<br><br>\n",
+    ">><예외 발생시 수행되는 코드><br><br>\n",
+    ">>finally:<br><br>\n",
+    ">><예외 발생 여부와 상관없이 항상 수행되는 코드><br><br>\n",
+    "<br><br>\n",
+    "\n",
+    ">##### 발생할 수 있는 대표적인 에러\n",
+    "<br><br>\n",
+    ">>에러<br><br>\n",
+    ">>ZeroDivisionError  => 0으로 나누려 할 때 발생<br><br>\n",
+    ">>IndexError         => 리스트의 인덱스 오류<br><br>\n",
+    ">>ValueError         => 리스트의 index(value)의 서치 실패<br><br>\n",
+    ">>KeyError           => 딕셔너리에 없는 key로 인덱싱한 경우\n",
     "<br><br><br><br>"
    ]
   },
