--- a/오늘의 공부0712 - 파이썬 클래스.ipynb
+++ b/오늘의 공부0712 - 파이썬 클래스.ipynb
@@ -253,7 +253,9 @@
    "metadata": {},
    "source": [
     "# 파이썬을 마치며...\n",
-    "\n",
+    "오늘 함수와 반복문을 빠져나가는 방법부터 시작해 예외처리까지 다시 한 번 되짚어보며 정리를 해봤는데 확실히 처음 접했을 때보다 여러번 보니 익숙해지고, 이해가 안되던 것들도 이해가 점점 되게 되었다. 누군가는 당연한 소리를 한다고 하지만 익숙한 것을 반복해서 보는 과정이 힘들기 때문에 누군가는 전문가가 되고 누군가는 포기하고 다른 길을 찾는 것이 아닐까...\n",
+    "오늘은 numpy,matplot,pandas까지 하고 싶었지만 아쉽게도 거기까지는 하지 못할 것 같다.\n",
+    "오늘은 오늘 작성한 것만 보고 만약 내일 아침 일찍 일어날 수 있다면 마저 해봐야 겠다.\n",
     "\n",
     "참고 = https://twpower.github.io/17-with-usage-in-python"
    ]
