Update 오늘의 공부0712 - 파이썬 클래스.ipynb

--- a/오늘의 공부0712 - 파이썬 클래스.ipynb
+++ b/오늘의 공부0712 - 파이썬 클래스.ipynb
@@ -41,9 +41,9 @@
     "   **return a+b**\n",
     "<br><br>\n",
     "<br><br>\n",
-    "이 모듈에 있는 sum함수를 사용하려면 다음 같이 하면된다.\n",
-    "**import module.py as md**\n",
-    "**md.sum(1,5)**\n",
+    "이 모듈에 있는 sum함수를 사용하려면 다음 같이 하면된다.<br><br>\n",
+    "**import module.py as md**<br><br>\n",
+    "**md.sum(1,5)**<br><br>\n",
     "<br><br>\n",
     "그러면 결과값 6이 나온다.\n",
     "<br><br>\n",
