Update 오늘의 공부0712 - 파이썬 클래스.ipynb

--- a/오늘의 공부0712 - 파이썬 클래스.ipynb
+++ b/오늘의 공부0712 - 파이썬 클래스.ipynb
@@ -47,7 +47,8 @@
     "<br><br>\n",
     "그러면 결과값 6이 나온다.\n",
     "<br><br>\n",
-    "이처럼 모듈을 쓰는 방법은 먼저 모듈을 import하고 import한 모듈의 함수를 \"모듈.함수\"로 사용하면 된다.\n",
+    "이처럼 모듈을 쓰는 방법은 먼저 사용할 모듈을 import하고<br><br>\n",
+    "import한 모듈에 있는 함수를 \"모듈.함수\"로 사용하면 된다.\n",
     "<br><br>\n",
     "<br><br>\n",
     "이것으로 모듈의 개념과 사용법을 알아보았다.\n",
@@ -55,14 +56,15 @@
     "<br><br>\n",
     "# 파일 읽고 쓰기\n",
     "<br><br>\n",
-    "**file_data = open('file.txt')**\n",
-    "**print(file_data.readline(), end=\"\")**\n",
+    "**file_data = open('file.txt')**<br><br>\n",
+    "**print(file_data.readline(), end=\"\")**<br><br>\n",
     "**file_data.close()**<br><br>\n",
     "<br><br>\n",
-    "**with open('file.txt') as file_data:**\n",
-    "    **print(file_data.readline(), end=\"\")**<br><br>\n",
+    "**with open('file.txt') as file_data:**<br><br>\n",
+    ">**print(file_data.readline(), end=\"\")**<br><br>\n",
     "<br><br>\n",
-    "원문은 위의 문장이지만 with문을 사용하면 아래처럼 좀 더 단순하게 사용할 수 있다.\n",
+    "\n",
+    "원문은 위의 문장이지만 with문을 사용하면 아래처럼 좀 더 단순하게 사용할 수 있다.<br><br>\n",
     "원칙적으로 파일을 열면 close()를 써줘야 하지만 with문을 사용할 때는 with문을 나올 때 자동으로 close를 불러주기 떄문에 따로 쓰지 않아도 된다.\n",
     "<br><br>\n",
     "### 쓰기(Write)\n",
