Update 오늘의 공부0712 - 파이썬 클래스.ipynb

--- a/오늘의 공부0712 - 파이썬 클래스.ipynb
+++ b/오늘의 공부0712 - 파이썬 클래스.ipynb
@@ -69,28 +69,31 @@
     "<br><br>\n",
     "### 쓰기(Write)\n",
     "<br><br>\n",
-    "**with open('file.txt', 'w') as file_data:**\n",
-    "    **file_data.write(\"First\\n\")**\n",
-    "    **file_data.write(\"Second\")**<br><br>\n",
+    "**with open('file.txt', 'w') as file_data:**<br><br>\n",
+    ">**file_data.write(\"First\\n\")**<br><br>\n",
+    ">**file_data.write(\"Second\")**<br><br>\n",
     "<br><br>\n",
     "<br><br>\n",
+    "\n",
     "쓰기모드는 'w'로 명시하며 이 때 파일.write(\"문장\")을 하게되면 해당 파일에 쓸때마다 계속 덮어쓰이게 된다.\n",
     "<br><br>\n",
     "### 읽기(Read)\n",
     "<br><br>\n",
-    "**with open('file.txt', 'r') as file_data:**\n",
-    "    **for line in file_data:**\n",
-    "        **print(line)**<br><br>\n",
+    "**with open('file.txt', 'r') as file_data:**<br><br>\n",
+    ">**for line in file_data:**<br><br>\n",
+    ">>**print(line)**<br><br>\n",
     "        <br><br>\n",
+    "        \n",
     "읽기모드는 'r'로 쓰며 데이터를 읽어오는 것만 가능하다.\n",
     "이미 적혀있는 데이터를 위 문장처럼 for문으로 읽어오면 파일의 리스트가 조건으로 들어가게 되고 for문을 돌며 차례로 읽어와서 print를 통해 보여진다.\n",
     "<br><br>\n",
     "<br><br>\n",
     "### 추가(Append)\n",
     "<br><br>\n",
-    "**with open('file.txt', 'a') as file_data:**\n",
-    "    **file_data.write(\"Third\\n\")**<br><br>\n",
+    "**with open('file.txt', 'a') as file_data:**<br><br>\n",
+    ">**file_data.write(\"Third\\n\")**<br><br>\n",
     "<br><br>\n",
+    "\n",
     "읽기모드는 'a'로 쓰며 기본적인 방법은 write와 같지만 차이점이 있다면 w와 달리 a는 기록할때마다 덮어쓰는 것이 아니라 계속 추가가 된다는 것이다.\n",
     "<br><br>\n",
     "<br><br>\n",
@@ -98,23 +101,30 @@
     "        \n",
     "# 파이썬 클래스\n",
     "<br><br>\n",
-    "클래스는 일종의 틀이라고 할 수 있다. 변수나 함수등을 클래스에 정의해 놓으면 객체를 만들었을때 그 변수와 함수를 그대로 사용할 수 있다.\n",
-    "같은 작업을 반복하거나 생성된 객체들을 관리해야 할 때 만약 클래스가 아니라 하나씩 작업했다면 다시 하나씩 수정해야 하지만 클래스로 만든 객체는 클래스 부분만 수정해주면 모든 객체가 바뀌기 때문에 유지,보수 면에서도 효율성이 엄청나다고 할 수 있다. 정리해 보자면 클래스의 큰 장점은 다음 2가지라고 할 수 있을 것 같다.<br><br>\n",
+    "클래스는 일종의 틀이라고 할 수 있다.  \n",
+    "\n",
+    "변수나 함수등을 클래스에 정의해 놓으면 객체를 만들었을때 그 변수와 함수를 그대로 사용할 수 있다.  \n",
+    "\n",
+    "같은 작업을 반복하거나 생성된 객체들을 관리해야 할 때 만약 클래스가 아니라 하나씩 작업했다면 다시 하나씩 수정해야 하지만 클래스로 만든 객체는 클래스 부분만 수정해주면 모든 객체가 바뀌기 때문에 유지,보수 면에서도 효율성이 엄청나다고 할 수 있다.  \n",
+    "\n",
+    "정리해 보자면 클래스의 큰 장점은 다음 2가지라고 할 수 있을 것 같다.<br><br>\n",
     "**1) 비슷한 객체를 생성할 때 유리하다.**<br><br>\n",
     "**2) 객체들을 관리하기가 효율적이다**<br><br>\n",
     "<br><br>\n",
     "### 객체\n",
     "<br><br>\n",
-    "객체는 클래스 모양 그대로 생성된 실체를 말하며 '실체'에 초점을 둔다.\n",
+    "객체는 클래스 모양 그대로 생성된 실체  \n",
+    "'실체'에 초점을 둔다.  \n",
     "클래스의 인스턴스라고도 한다.\n",
     "<br><br>\n",
     "<br><br>\n",
     "##### 객체를 생성하는 방법\n",
-    "**class robot:**\n",
+    "<br><br>\n",
+    "**class 클래스명:**\n",
     "<br><br><br><br>\n",
     "위와 같은 클래스가 있을 때 객체를 생성하는 방법\n",
     "<br><br>\n",
-    "**객체명 = 클래스()**\n",
+    "**객체명 = 클래스명()**\n",
     "<br><br><br><br>\n",
     "생성자로 아무것도 필요하지 않다면 빈칸으로 ()를 남겨 생성하고 생성자에 필요한 변수가 있다면 self를 제외한 나머지 만큼 변수를 넣어 생성한다.\n",
     "<br><br><br><br>\n",
