Update 오늘의 공부0712 - 파이썬 클래스.ipynb

--- a/오늘의 공부0712 - 파이썬 클래스.ipynb
+++ b/오늘의 공부0712 - 파이썬 클래스.ipynb
@@ -130,8 +130,9 @@
     "<br><br><br><br>\n",
     "### 인스턴스\n",
     "<br><br>\n",
-    "객체를 소프트웨어에 실체화 한 것.\n",
-    "인스턴스는 '관계'에 초점을 맞추고 객체가 메모리에 할당되어 실제 사용될 때 인스턴스라고 한다.\n",
+    "객체를 소프트웨어에 실체화 한 것.  \n",
+    "인스턴스는 '관계'에 초점을 맞춤.  \n",
+    "객체가 메모리에 할당되어 실제 사용될 때 인스턴스라고 한다.\n",
     "<br><br>\n",
     "### 메서드\n",
     "<br><br>\n",
@@ -149,7 +150,8 @@
     "        .<br><br>\n",
     "        .<br><br>\n",
     "        \n",
-    "생성자의 기본형은 클래스 아래에 __init__이라는 함수명으로 함수를 정의한는 것이고 여기에 들어있는 코드는 객체가 생성되면 무조건 실행된다.\n",
+    "생성자의 기본형은 클래스 아래에 __init__이라는 함수명으로 함수를 정의.  \n",
+    "여기에 들어있는 코드는 객체가 생성되면 무조건 실행된다.\n",
     "<br><br>\n",
     "### 소멸자\n",
     "<br><br>\n",
@@ -163,7 +165,8 @@
     "**class robot:**<br><br>\n",
     "  >**name = \"robo\"**<br><br>\n",
     "  >**def info(self):**<br><br>\n",
-    "    >>**print('나의 이름은', self.name, '입니다!')**\n",
+    "  >>**self.name = \"robo222\"**<br><br>\n",
+    "    >>**print('나의 이름은', self.name, '입니다!')**<br><br>\n",
     "\n",
     "**rob = robot()**<br><br>\n",
     "**rob.info()**\n",
