Update 오늘의 공부0712 - 파이썬 클래스.ipynb

--- a/오늘의 공부0712 - 파이썬 클래스.ipynb
+++ b/오늘의 공부0712 - 파이썬 클래스.ipynb
@@ -31,15 +31,20 @@
     "이것이 어떤 차이냐 하면 함수안에 있는 For문을 예로 들어보면 For문 안에 break를 쓰면 For문이 종료되고 함수 내부의 다음 명령을 수행한다. 하지만 For문안에 RETURN이 수행되면 그대로 함수값은 Return값이 되고 그대로 함수가 종료된다. 차이가 분명하다. Break는 함수값을 반환하지 않고 반복문만 종료되지만 return은 반환값을 반환하고 함수가 종료된다.\n",
     "이 차이를 분명히 이해하고 사용해야 한다.<br><br>\n",
     "<br><br>\n",
+    "# Input() 여러개 받기\n",
+    "<br><br>\n",
+    "a, b = input('숫자 두 개를 입력하세요: ').split() \n",
+    "<br><br>\n",
     "# 모듈\n",
     "<br><br>\n",
     "모듈이란 다른 프로그램에서 불러 쓸 수 있도록 함수,변수, 클래스를 모아놓은 파일을 말한다.\n",
     "<br><br>\n",
     "**module.py**라는 모듈이 있고 그 안에 sum이라는 함수가 있다고 해보자\n",
     "<br><br>\n",
-    "**def sum(a,b):**\n",
-    "   **return a+b**\n",
+    "**def sum(a,b):**<br><br>\n",
+    ">**return a+b**\n",
     "<br><br>\n",
+    "\n",
     "<br><br>\n",
     "이 모듈에 있는 sum함수를 사용하려면 다음 같이 하면된다.<br><br>\n",
     "**import module.py as md**<br><br>\n",
@@ -48,7 +53,36 @@
     "그러면 결과값 6이 나온다.\n",
     "<br><br>\n",
     "이처럼 모듈을 쓰는 방법은 먼저 사용할 모듈을 import하고<br><br>\n",
-    "import한 모듈에 있는 함수를 \"모듈.함수\"로 사용하면 된다.\n",
+    "import한 모듈에 있는 함수를 \"모듈.함수\"로 사용하면 된다.<br><br>\n",
+    "<br><br>\n",
+    "## import 방법의 차이\n",
+    "<br><br>\n",
+    "#### import 함수\n",
+    "\n",
+    "> import urllib.request<br><br>\n",
+    "mine = urllib.request()<br><br>\n",
+    "import urllib만 하면 모듈.함수 형식으로 사용해야 한다.\n",
+    "<br><br>\n",
+    "\n",
+    "#### from 모듈 import 함수\n",
+    "\n",
+    "> from urllib import request<br><br>\n",
+    "mine = request()\n",
+    "<br><br>\n",
+    "#### from string import *\n",
+    "\n",
+    "> 간단히 설명하지면 * 은 모든 속성과 함수를 가지고 오기 때문에 겹치는 부분이 overwrite될 수 있다.\n",
+    "따라서 from string import foo 같이 사용할 것만 지정해 사용하는 것 권장.\n",
+    "\n",
+    "<br><br>\n",
+    "< 조금 자세한 설명>\n",
+    "<br><br>\n",
+    "import string 이라고 했으면, string.foo 라는 방식으로 사용한다.  \n",
+    "즉, 현재의 네임스페이스에 string 이라는 모듈을 그냥 가져온 것이다.  \n",
+    "반면, from string import foo 라고 선언했으면, foo 라는 이름을 그냥 사용할 수 있다. 현재의 네임스페이스 안에 string.foo를 가져와서 foo라는 이름으로 참조할 수 있게 되었다.  \n",
+    "간편하지만, 조심해야 할 구문이 있다. 바로, from string import * 이다. string 모듈의 모든 public 속성/함수를 몽땅 현재 네임스페이스 안으로 가지고 온다. 만약 같은 이름이 있으면 overwrite 된다. 따라서, 가급적이면 * 를 쓰지 말고, 하나씩 지정해서 사용하는 게 좋은 습관이다.\n",
+    "\n",
+    " \n",
     "<br><br>\n",
     "<br><br>\n",
     "이것으로 모듈의 개념과 사용법을 알아보았다.\n",
@@ -143,7 +177,7 @@
     "생성자는 객체 생성시 초기화를 위한 메서드이다.\n",
     "<br><br>\n",
     "**class Dog:**<br><br>\n",
-    ">**def__init__(self,변수)**<br><br>\n",
+    ">**def__init__(self,변수):**<br><br>\n",
     ">>**코드**<br><br>\n",
     ">>**코드**<br><br>\n",
     "        .<br><br>\n",
@@ -277,17 +311,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "나의 이름은 roby 입니다!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class robot:\n",
     "  name = \"robo\"\n",
@@ -297,6 +323,36 @@
     "\n",
     "rob = robot()\n",
     "rob.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "제대로 입력하였습니다.\n",
+      "휴~\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "res = 0\n",
+    "try:\n",
+    "    x = int(input())\n",
+    "    res = 123/x\n",
+    "except ZeroDivisionError as err:\n",
+    "    print(err)\n",
+    "#     x = input()\n",
+    "else:\n",
+    "    print(\"제대로 입력하였습니다.\")\n",
+    "finally:\n",
+    "    print(\"휴~\")"
    ]
   }
  ],
