--- a/오늘의 공부 0712 - sql.ipynb
+++ b/오늘의 공부 0712 - sql.ipynb
@@ -24,77 +24,80 @@
     "\n",
     "경량 데이터베이스 용과 데이터 베이스 서버 구축용으로 나뉜다.\n",
     "경량은 1인 사용자를 전제로 서버-클라이언트 개념이 없다. 로컬에 저장 ) SQLite\n",
-    "서버 구축은 다수 사용자를 전제로 하며 서버에 다수의 클라이언트가 접속하다. ) MYSQL, Oracle SQL 등..\n",
+    "서버 구축은 다수 사용자를 전제로 하며 서버에 다수의 클라이언트가 접속하다. ) MYSQL, Oracle SQL 등..<br><br>\n",
     "\n",
     "## DB의 종류\n",
     "DB는 계층형, 네트워크형, 관계형, 객체 지향형등 여러가지 종류가 있다.\n",
-    "현재는 종류는 별로 중요하지 않기 때문에 나중에 필요하게 되면 공부해 보도록 하겠다.\n",
+    "현재는 종류는 별로 중요하지 않기 때문에 나중에 필요하게 되면 공부해 보도록 하겠다.<br><br>\n",
     "  \n",
-    "## 용어\n",
+    "## <용어>\n",
+    "<br><br>\n",
     "  \n",
     "### 필드\n",
     "데이터 베이스에서 데이터의 속성.\n",
-    "  \n",
+    "  <br><br>\n",
     "### 레코드\n",
     "데이터 베이스에서 정보들\n",
-    "  \n",
+    "  <br><br>\n",
     "### 테이블\n",
     "필드와 레코드로 구분된다.\n",
     "데이터들이 들어있다\n",
-    "  \n",
+    "  <br><br>\n",
     "### 데이터베이스\n",
     "테이블의 집합\n",
-    "  \n",
+    "  <br><br>\n",
     "## 데이터를 분산시키는 이유\n",
-    "데이터를 분산시키지 않으면 레코드의 길이가 길어질 경우 한 번 접근할 때 필요한 메모리와 시간이 많이 걸리게 되기 때문에 데이터를 여러 테이블로 분산시켜 메모리,시간 자원을 아껴준다.\n",
-    "  \n",
-    "## 주석\n",
-    "1행 주석 하는법 = --\n",
-    "멀티라인 주석 하는법 = /* */\n",
     "<br><br>\n",
+    "데이터를 분산시키지 않으면 레코드의 길이가 길어질 경우 한 번 접근할 때 필요한 메모리와 시간이 많이 걸리게 되기 때문에 데이터를 여러 테이블로 분산시켜 메모리,시간 자원을 아껴준다.\n",
+    "  <br><br>\n",
+    "## 주석\n",
+    "<br><br>\n",
+    "1행 주석 하는법 = --<br><br>\n",
+    "멀티라인 주석 하는법 = /* */\n",
+    "<br><br><br><br>\n",
     "## SQL의 특징\n",
     "대소문자 구분을 하지 않는다.\n",
-    "  \n",
+    "  <br><br>\n",
     "## 데이터 베이스에서 데이터 보기(SELECT)\n",
-    "**select * from table1;**\n",
-    "  \n",
+    "<br><br>\n",
+    "**select * from table1;**<br><br>\n",
+    "  <br><br>\n",
     "select는 내가 보고 싶은 column을 설정할 수 있고 * 은 모든 column을 의미한다.\n",
     "from table1은 table1에서 정보를 가져온다는 뜻이다.\n",
-    "  \n",
+    "  <br><br>\n",
     "## 정렬하기(ORDER BY)  \n",
     "\n",
-    "\n",
+    "<br><br><br><br>\n",
     "  \n",
     "#### 기준이 1개인 정렬\n",
-    "**select * from table1 order by name;**\n",
-    "**select * from table1 order by name asc;**\n",
-    "**select * from table1 order by name desc;**\n",
-    "  \n",
+    "**select * from table1 order by name;**<br><br>\n",
+    "**select * from table1 order by name asc;**<br><br>\n",
+    "**select * from table1 order by name desc;**<br><br>\n",
+    "  <br><br>\n",
     "뒤에 order by 를 사용하면 정렬을 시킬 수 있다.\n",
     "default는 오름차순이지만 desc를 쓰면 내림차순으로 정렬할 수 있다.  \n",
-    "  \n",
+    " <br><br>\n",
     "#### 기준이 2개인 정렬\n",
-    "**select * from table1 order by continent desc, name;**\n",
+    "**select * from table1 order by continent desc, name;**<br><br>\n",
     "  \n",
     "만약 정렬기준이 위와같이 2가지라면 앞에서부터 continent를 기준으로 내림차순 정렬하고, 같은 continent 안에서 name을 기준으로 오름차순 정렬한다.\n",
-    "  \n",
+    "  <br><br>\n",
     "## 행수 카운트 (Count)\n",
-    "**select count(name) from country;**\n",
-    "  \n",
+    "**select count(name) from country;**<br><br>\n",
+    "  <br><br>\n",
     "country 테이블에서 name column을 불러와 행의 수를 세준다.\n",
-    "  \n",
+    "  <br><br>\n",
     "## 출력하는 행의 수 조절(LIMIT, OFFSET)\n",
-    "**select * from 테이블명 LIMIT 행수 OFFSET 시작위치;**\n",
-    "**select * from 테이블명 LIMIT 시작위치, 행수;**\n",
-    "  \n",
+    "**select * from 테이블명 LIMIT 행수 OFFSET 시작위치;**<br><br>\n",
+    "**select * from 테이블명 LIMIT 시작위치, 행수;**<br><br>\n",
+    "  <br><br>\n",
     "위와 같이 출력하면 시작위치만큼 건너뛰기 시작위치+1부터 행수까지 포함하여 출력한다.\n",
-    "  \n",
+    "  <br><br>\n",
     "## 필터링 (WHERE)\n",
     "#### (AND, OR, NOT)\n",
-    "**SELECT name from country WHERE population < 1000 AND continent = 'Asia' ORDER BY population DESC;**\n",
-    "  \n",
-    "이 문장의 SELECT 순서는 population 조건을 만족하고 continent를 만족하는 것의 name을 출력하고 population을 기준으로 내림차순 정렬하는 것을 의미한다.\n",
-    "  \n",
+    "**SELECT name from country WHERE population < 1000 AND continent = 'Asia' ORDER BY population DESC;**<br><br>\n",
+    "  <br><br>\n",
+    "이 문장의 SELECT 순서는 population 조건을 만족하고 continent를 만족하는 것의 name을 출력하고 population을 기준으로 내림차순 정렬하는 것을 의미한다.  \n",
     "위처럼 WHERE을 사용해 출력할 데이터의 조건을 설정할 수 있다.\n",
     "  \n",
     "AND를 쓰면 양 쪽 조건을 만족하는 데이터\n",
@@ -159,11 +162,11 @@
     "바꾸는 값은 숫자나 '문자'도 가능하다.\n",
     "<br><br>\n",
     "## 데이터 삭제(DELETE FROM)\n",
-    "**DELETE FROM 테이블 WHERE a = 2;**\n",
+    "**DELETE FROM 테이블 WHERE a = 2;**<br><br>\n",
     "<br><br>\n",
     "a컬럼의 값이 2인 레코드를 삭제\n",
     "<br><br>\n",
-    "**DELETE FROM 테이블;**\n",
+    "**DELETE FROM 테이블;**<br><br>\n",
     "<br><br>\n",
     "테이블에 있는 모든 레코드를 삭제\n",
     "<br><br>\n",
@@ -171,9 +174,11 @@
     "데이터베이스에서 테이블을 삭제\n",
     "<br><br>\n",
     "## 0과 NULL\n",
+    "<br><br>\n",
     "0은 0이라는 값이 들어있는 것이고 NULL은 아예 데이터가 없는 것이기 때문에 이 둘은 다르다.\n",
     "<br><br>\n",
     "## 데이터의 자료형\n",
+    "<br><br>\n",
     "varchar(5)  -- 정해진 수 안에서 길이변경 가능\n",
     "char(2)     -- 길이 고정\n",
     "INTERGER    -- 정수형\n",
@@ -182,186 +187,201 @@
     "TEXT        -- 문자열\n",
     "<br><br>\n",
     "## 데이터 생성시 조건설정\n",
-    "**1) a INTEGER NOT NULL DEFAULT 0**\n",
-    "**2) b VARCHAR(255) UNIQUE NOT NULL**\n",
     "<br><br>\n",
-    "1번은 INT값만 받을 수 있고 빈칸으로 둘 수 없으며 만약 입력값이 없다면 기본값은 0\n",
-    "2번은 VARCHAR형 데이터로 받고 그 길이는 최대 255이며 빈칸으로 둘 수 없는데 겹치는 값이면 받을 수 없다는 의미다.\n",
+    "**1) a INTEGER NOT NULL DEFAULT 0**<br><br>\n",
+    "**2) b VARCHAR(255) UNIQUE NOT NULL**<br><br>\n",
+    "<br><br>\n",
+    "1번은 INT값만 받을 수 있고 빈칸으로 둘 수 없으며 만약 입력값이 없다면 기본값은 0  \n",
+    "2번은 VARCHAR형 데이터로 받고 그 길이는 최대 255이며 빈칸으로 둘 수 없는데 겹치는 값이면 받을 수 없다는 의미다.  \n",
     "NOT NULL, DEFAULT 등등의 배치순서는 상관없다\n",
     "<br><br>\n",
     "## PRIMARY KEY\n",
-    "**id INTEGER PRIMARY KEY**\n",
-    "**id INT UNIQUE PRIMARY KEY**\n",
+    "<br><br>\n",
+    "**id INTEGER PRIMARY KEY**<br><br>\n",
+    "**id INT UNIQUE PRIMARY KEY**<br><br>\n",
     "<br><br>\n",
     "int, varchar, real 어떤 값이든 프라이머리 키로 설정할 수 있으며, 프라이머리 키가 되는 값은 유일 값이어야 한다.\n",
     "<br><br>\n",
-    "**id INTEGER PRIMARY KEY AUTOINCREMENT**\n",
+    "**id INTEGER PRIMARY KEY AUTOINCREMENT**<br><br>\n",
     "<br><br>\n",
     "INTEGER PRIMARY KEY AUTOINCREMENT로 해 놓으면 데이터가 저장될 때마다 자동으로 키값이 증가한다.\n",
     "<br><br>\n",
-    "**INSERT INTO 테이블(b, c) VALUES (1, 4);**\n",
+    "**INSERT INTO 테이블(b, c) VALUES (1, 4);**<br><br>\n",
     "<br><br>\n",
     "키값이 자동으로 증가하여 값을 넣을 필요가 없을때는 키값을 뺀 나머지를 지정해 넣어주면 된다.\n",
     "<br><br>\n",
     "## Column 추가(ALTER TABLE ~ ADD COLUMN)\n",
-    "**ALTER TABLE 테이블 ADD COLUMN 컬럼**\n",
+    "<br><br>\n",
+    "**ALTER TABLE 테이블 ADD COLUMN 컬럼**<br><br>\n",
     "<br><br>\n",
     "컬럼을 지점하고 테이블에 추가\n",
     "<br><br>\n",
     "## 다른 테이블의 값으로 테이블 생성\n",
-    "**CREATE TABLE 테이블2 AS SELECT a, b, c FROM 테이블;**\n",
+    "<br><br>\n",
+    "**CREATE TABLE 테이블2 AS SELECT a, b, c FROM 테이블;**<br><br>\n",
     "<br><br>\n",
     "테이블의 컬럼을 받아와서 테이블2를 생성한다.\n",
     "<br><br>\n",
     "## 테이블 이름변경\n",
-    "**ALTER TABLE 테이블2 RENAME TO 테이블**\n",
+    "<br><br>\n",
+    "**ALTER TABLE 테이블2 RENAME TO 테이블**<br><br>\n",
     "<br><br>\n",
     "테이블2의 이름을 '테이블'로 변경\n",
     "<br><br>\n",
     "## FOREIGN KEY\n",
-    "**FOREIGN KEY 컬럼1 REFERENCES 테이블(컬럼2)**\n",
     "<br><br>\n",
-    "테이블의 컬럼2를 현재 테이블의 컬럼1에 foreign key로 연결한다.\n",
-    "foreign key로 연결되는 컬럼2의 경우 중복되면 안되기 때문에 Primary key이며 컬럼1이 있는 테이블은 컬럼2에 없는 데이터가 추가될 수 없다. 일종의 제약역할이다.\n",
-    "다시말해 컬럼1에 데이터를 넣으려면 넣으려는 값이 컬럼2에 있어야만 가능하다.\n",
+    "**FOREIGN KEY 컬럼1 REFERENCES 테이블(컬럼2)**<br><br>\n",
+    "<br><br>\n",
+    "테이블의 컬럼2를 현재 테이블의 컬럼1에 foreign key로 연결한다.  \n",
+    "foreign key로 연결되는 컬럼2의 경우 중복되면 안되기 때문에 Primary key이며 컬럼1이 있는 테이블은 컬럼2에 없는 데이터가 추가될 수 없다. 일종의 제약역할이다.  \n",
+    "다시말해 컬럼1에 데이터를 넣으려면 넣으려는 값이 컬럼2에 있어야만 가능하다.  \n",
     "또 데이터를 삭제할 때 foreign key로 이용되는 테이블은 먼저 삭제가 불가하지만 foreign key를 이용한 테이블은 먼저 삭제 할 수 있다.\n",
     "<br><br>\n",
     "## JOIN\n",
+    "<br><br>\n",
     "SQLite는 RIGHT JOIN과 OUTER JOIN을 지원하지 않는다.\n",
     "<br><br>\n",
     "### < Inner Join>\n",
     "<br><br>\n",
     "#### Cross Join\n",
-    "**SELECT * FROM student, major;**\n",
     "<br><br>\n",
-    "cross join 또는 ,를 사용\n",
-    "왼쪽 테이블에 오른쪽 테이블이 for문 처럼 하나씩 할당하며 출력된다.\n",
-    "10 * 10이면 100개의 항이 보여짐\n",
+    "**SELECT * FROM student, major;**<br><br>\n",
+    "<br><br>\n",
+    "cross join 또는 ,를 사용  \n",
+    "왼쪽 테이블에 오른쪽 테이블이 for문 처럼 하나씩 할당하며 출력된다.  \n",
+    "10 * 10이면 100개의 항이 보여짐  \n",
     "<br><br>\n",
     "#### Natural Join\n",
-    "**SELECT * FROM student NATURAL JOIN major;**\n",
+    "<br><br>\n",
+    "**SELECT * FROM student NATURAL JOIN major;**<br><br>\n",
     "<br><br>\n",
     "조건을 명시하지 않아도 공통부분을 찾아서 출력한다.\n",
     "<br><br>\n",
     "### < Outer Join>\n",
     "<br><br>\n",
     "#### Left Join\n",
-    "**SELECT * FROM student LEFT JOIN major ON student.major = major.major;**\n",
     "<br><br>\n",
-    "student.major와 major.major가 같은 항을 왼쪽을 기준으로 합친다.\n",
+    "**SELECT * FROM student LEFT JOIN major ON student.major = major.major;**<br><br>\n",
+    "<br><br>\n",
+    "student.major와 major.major가 같은 항을 왼쪽을 기준으로 합친다.  \n",
     "여기서 왼쪽기준이란 왼쪽은 전부 출력하면서 오른쪽에 해당하는 값은 겹치는 것만 출력하고 겹치지 않는 값은 NULL으로 처리하는 것이다.  \n",
-    "  \n",
+    "  <br><br>\n",
     "#### UNION ALL\n",
-    "**SELECT ~ FROM ~ ON\n",
-    "UNION ALL\n",
-    "SELECT ~ FROM ~ ON\n",
-    "WHERE ~ IS NULL**\n",
+    "<br><br>\n",
+    "**SELECT ~ FROM ~ ON**<br><br>\n",
+    "**UNION ALL**<br><br>\n",
+    "**SELECT ~ FROM ~ ON**<br><br>\n",
+    "**WHERE ~ IS NULL****<br><br>\n",
     "  <br><br>\n",
     "SQLite는 Outer Join기능이 없지만 두 출력값을 합치는 Union All을 사용하면 비슷하게 구현할 수 있다.  \n",
     "  <br><br>\n",
     "\n",
     "## VIEW로 SELECT결과 임시저장하기\n",
-    "SELECT문을 출력하다보면 결과를 저장해두고 참고하고 싶을 때가 종종 있다.\n",
-    "그럴때 VIEW를 생성해두면 그 결과를 매번 출력하지 않고 볼 수 있다.\n",
     "<br><br>\n",
-    "**CREATE VIEW 뷰이름 AS SELECT ~ FROM ~**\n",
+    "SELECT문을 출력하다보면 결과를 저장해두고 참고하고 싶을 때가 종종 있다.  \n",
+    "그럴때 VIEW를 생성해두면 그 결과를 매번 출력하지 않고 볼 수 있다.  \n",
     "<br><br>\n",
-    "이렇게 하면 SELECT문이 Query에 저장되고 Data에 결과가 저장된다.\n",
-    "view는 데이터베이스에 영향을 주지 않으므로 자유롭게 만들 수 있다.\n",
+    "**CREATE VIEW 뷰이름 AS SELECT ~ FROM ~**<br><br>\n",
     "<br><br>\n",
-    "**SELECT * FROM 뷰이름**\n",
+    "이렇게 하면 SELECT문이 Query에 저장되고 Data에 결과가 저장된다.  \n",
+    "view는 데이터베이스에 영향을 주지 않으므로 자유롭게 만들 수 있다.  \n",
+    "<br><br>\n",
+    "**SELECT * FROM 뷰이름**<br><br>\n",
     "<br><br>\n",
     "위처럼 뷰이름으로 select를 하면 뷰를 출력할 수 있다.\n",
     "<br><br>\n",
     "#### 뷰 삭제(DROP VIEW)\n",
-    "**DROP VIEW 뷰이름**\n",
+    "<br><br>\n",
+    "**DROP VIEW 뷰이름**<br><br>\n",
     "<br>\n",
     "drop을 사용해 뷰를 삭제할 수 있다.\n",
     "<br><br>\n",
     "\n",
     "## SQL 함수\n",
+    "<br><br>\n",
     "sql에서 유용하게 쓰일 수 있는 함수가 있다.\n",
     "<br><br>\n",
     "#### 연산함수\n",
     "<br><br>\n",
-    "**1) + - * /**\n",
-    "**2) X % Y**\n",
-    "**3) ABS(x)**\n",
-    "**4) ROUND(x, n)  --  소수점 n까지 x표시 (round(x)만 쓰면 소수점 없이 반올림되어 출력된다.**\n",
+    "**1) + - * /**<br><br>\n",
+    "**2) X % Y**<br><br>\n",
+    "**3) ABS(x)**<br><br>\n",
+    "**4) ROUND(x, n)  --  소수점 n까지 x표시 (round(x)만 쓰면 소수점 없이 반올림되어 출력된다.**<br><br>\n",
     "<br><br>\n",
     "#### 집계함수\n",
     "<br><br>\n",
-    "AVG(X)   -- X컬럼의 평균 계산\n",
-    "SUM(X)   -- X컬럼의 합 계산\n",
-    "COUNT(X) -- X컬럼의 항 갯수를 계산\n",
-    "MIM(X), MAX(X)  -- X컬럼의 최소값, 최대값 계산\n",
-    "VARIANCE(컬럼)  -- 컬럼의 분산계산\n",
-    "STDDEV(컬럼)    -- 컬럼의 표준편차계산\n",
+    "AVG(X)   -- X컬럼의 평균 계산  \n",
+    "SUM(X)   -- X컬럼의 합 계산  \n",
+    "COUNT(X) -- X컬럼의 항 갯수를 계산  \n",
+    "MIM(X), MAX(X)  -- X컬럼의 최소값, 최대값 계산  \n",
+    "VARIANCE(컬럼)  -- 컬럼의 분산계산  \n",
+    "STDDEV(컬럼)    -- 컬럼의 표준편차계산  \n",
     "<br><br>\n",
     "<집계함수의 특징>\n",
     "<br><br>\n",
-    "반드시 하나의 값만을 반환한다\n",
-    "NULL 값은 무시된다.(NULL 값이 무시되지 않으려면 NVL, NVL2와 같은 함수를 이용한다.)\n",
-    "GROUP BY 설정 없이 일반 컬럼과 기술될 수 없다.\n",
+    "반드시 하나의 값만을 반환한다  \n",
+    "NULL 값은 무시된다.(NULL 값이 무시되지 않으려면 NVL, NVL2와 같은 함수를 이용한다.)  \n",
+    "GROUP BY 설정 없이 일반 컬럼과 기술될 수 없다.  \n",
     "<br><br>\n",
     "#### 활용예시\n",
     "<br><br>\n",
-    "1) SELECT COUNT(* ) FROM 테이블;\n",
-    "2) SELECT COUNT(컬럼1) FROM 테이블;\n",
-    "3) SELECT AVG(컬럼1) FROM 테이블 WHERE 조건;\n",
-    "4) SELECT MIN(컬럼1), MAX(컬럼1) FROM 테이블 WHERE 조건;\n",
-    "5) SELECT SUM(컬럼1) FROM 테이블 WHERE 컬럼2 LIKE 'A%';\n",
+    "1) SELECT COUNT(* ) FROM 테이블;  \n",
+    "2) SELECT COUNT(컬럼1) FROM 테이블;  \n",
+    "3) SELECT AVG(컬럼1) FROM 테이블 WHERE 조건;  \n",
+    "4) SELECT MIN(컬럼1), MAX(컬럼1) FROM 테이블 WHERE 조건;  \n",
+    "5) SELECT SUM(컬럼1) FROM 테이블 WHERE 컬럼2 LIKE 'A%';  \n",
     "<br><br>\n",
-    "1. 테이블에서 전체행 * 의 수를 계산\n",
-    "2. 테이블에서 NULL을 제외한 컬럼1의 수를 계산\n",
-    "3. 테이블에서 조건을 만족하는 컬럼1의 평균을 계산\n",
-    "4. 테이블에서 조건을 만족하는 컬럼의 레코드 중 최소와 최대를 계산\n",
-    "5. 테이블에서 A로 시작하는 컬럼2의 컬럼1들의 합 계산\n",
+    "1. 테이블에서 전체행 * 의 수를 계산  \n",
+    "2. 테이블에서 NULL을 제외한 컬럼1의 수를 계산  \n",
+    "3. 테이블에서 조건을 만족하는 컬럼1의 평균을 계산  \n",
+    "4. 테이블에서 조건을 만족하는 컬럼의 레코드 중 최소와 최대를 계산  \n",
+    "5. 테이블에서 A로 시작하는 컬럼2의 컬럼1들의 합 계산  \n",
     "<br><br>\n",
     "## GRUOP BY\n",
     "<br><br>\n",
-    "**select 컬럼1, sum(컬럼2)**\n",
+    "**select 컬럼1, sum(컬럼2)**<br><br>\n",
     "\n",
-    "**from 테이블**\n",
+    "**from 테이블**<br><br>\n",
     "\n",
-    "**where 조건1**\n",
+    "**where 조건1**<br><br>\n",
     "\n",
-    "**group by 컬럼3**\n",
+    "**group by 컬럼3**<br><br>\n",
     "\n",
-    "**having 조건2**\n",
+    "**having 조건2**<br><br>\n",
     "\n",
-    "**order by 컬럼4;**\n",
+    "**order by 컬럼4;**<br><br>\n",
     "<br><br><br><br>\n",
-    "이 문장은 테이블에서 조건1을 만족하는 데이터 중 group by에 나온 컬럼을 기준으로 그룹을 만들고 조건2에 맞는 데이터를 선택해 컬럼4를 기준으로 출력한다는 의미.\n",
-    "GROUP BY를 쓰면 그 컬럼을 기준으로 겹치는 것을 그룹으로 묶겠다는 의미이고, 합을 구하거나 평균 등을 구할 때 해당 그룹의 합과 평균을 각각 알 수 있다.\n",
-    "HAVING은 조건문인데 WHERE이 SELECT할 데이터의 조건인 반면 HAVING은 조건에 포함되는 데이터만 Group by되게 한다.\n",
+    "이 문장은 테이블에서 조건1을 만족하는 데이터 중 group by에 나온 컬럼을 기준으로 그룹을 만들고 조건2에 맞는 데이터를 선택해 컬럼4를 기준으로 출력한다는 의미.  \n",
+    "GROUP BY를 쓰면 그 컬럼을 기준으로 겹치는 것을 그룹으로 묶겠다는 의미이고, 합을 구하거나 평균 등을 구할 때 해당 그룹의 합과 평균을 각각 알 수 있다.  \n",
+    "HAVING은 조건문인데 WHERE이 SELECT할 데이터의 조건인 반면 HAVING은 조건에 포함되는 데이터만 Group by되게 한다.  \n",
     "\n",
     "<br><br>\n",
     "## Python에서 데이터베이스 접근\n",
     "<br><br>\n",
-    "**import sqlite3**                                          -  sqlite3 모듈을 쓰기 위해 sqlite3을 import\n",
-    "**conn = sqlite3.connect('customer.db')**                 - 데이터베이스에 접근 및 생성\n",
-    "**cur = conn.cursor()**                                     - 커서 객체 생성\n",
-    "**cur.execute(\" sql 문장 \")**                               - 커서객체로 데이터베이스에서 쿼리문 실행\n",
-    "**cur.execute(\" INSERT INTO 테이블 VALUES (?,?,?) \")**   - ?를 사용해 사용자에게 입력값을 받는다\n",
-    "**cur.executemany(\" INSERT INTO 테이블 VALUES (?,?,?),** - executemany를 사용하면 여러개의 값을 받는다.\n",
-    "**(1001, 5, 10),**\n",
-    "**(1002. 7, 11)**\n",
-    "**);**\n",
-    "**conn.commit()**                                            - commit\n",
-    "**conn.close()**                                             - 데이터베이스 연결종료\n",
+    "**import sqlite3**      <br><br>              -  sqlite3 모듈을 쓰기 위해 sqlite3을 import<br><br><br><br>\n",
+    "**conn = sqlite3.connect('customer.db')**   <br><br>   - 데이터베이스에 접근 및 생성<br><br><br><br>\n",
+    "**cur = conn.cursor()**              <br><br>         - 커서 객체 생성<br><br><br><br>\n",
+    "**cur.execute(\" sql 문장 \")**        <br><br>     - 커서객체로 데이터베이스에서 쿼리문 실행<br><br><br><br>\n",
+    "**cur.execute(\" INSERT INTO 테이블 VALUES (?,?,?) \")**   <br><br>- ?를 사용해 사용자에게 입력값을 받는다<br><br>\n",
+    "**cur.executemany(\" INSERT INTO 테이블 VALUES (?,?,?),**<br><br> - executemany를 사용하면 여러개의 값을 받는다.<br><br>\n",
+    "**(1001, 5, 10),**<br><br>\n",
+    "**(1002. 7, 11)**<br><br>\n",
+    "**);**<br><br>\n",
+    "**conn.commit()**                                            ----------- commit<br><br>\n",
+    "**conn.close()**                                             ----------- 데이터베이스 연결종료<br><br>\n",
     "<br><br>\n",
     "## fetchone(), fetchall()\n",
-    "**cur.execute(\"SELECT * FROM employee_data\")**\n",
-    "**rows = cur.fetchall()**\n",
+    "<br><br>\n",
+    "**cur.execute(\"SELECT * FROM employee_data\")**<br><br>\n",
+    "**rows = cur.fetchall()**<br><br>\n",
+    "<br><br>\n",
+    "**for row in rows:**<br><br>\n",
+    "**print(row)**<br><br>\n",
+    "<br><br>\n",
+    "fetchone()은 실행한 결과물을 하나만 보여주고, fetchall()은 전부를 보여준다.  \n",
     "\n",
-    "**for row in rows:**\n",
-    "**print(row)**\n",
-    "\n",
-    "fetchone()은 실행한 결과물을 하나만 보여주고, fetchall()은 전부를 보여준다.\n",
-    "\n",
-    "\n",
-    "\n",
+    "<br><br>\n",
+    "<br><br>\n",
     "출처: https://somjang.tistory.com/entry/Python-Python에서-Sqlite3-사용하기 [솜씨좋은장씨]\n",
     "출처: https://araikuma.tistory.com/712 [프로그램 개발 지식 공유]\n"
    ]
