--- a/0716/regular_expresion.ipynb
+++ b/0716/regular_expresion.ipynb
@@ -278,10 +278,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 13), match='10 295 adasda'>\n",
+      "10 295 adasda\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "a= '10 295 adasda'\n",
+    "m = re.compile('([0-9]+) ([0-9]+).+')\n",
+    "print(m.match(a))\n",
+    "print(m.match(a).group(0))\n",
+    "#.group(1) => 그룹1의 매칭된 문자열\n",
+    "#.group(2) => 그룹2의 매칭된 문자열\n",
+    "#.group() => 매칭된 문자열을 한꺼번에 반환(그룹 안된것도 포함)\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
