--- a/0716/regular_expresion.ipynb
+++ b/0716/regular_expresion.ipynb
@@ -303,6 +303,55 @@
     "\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1 2 ', ' 4 ', ' ', ' 7 8']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('[0-9 ]+', '1 2 Fizz 4 Buzz Fizz 7 8')\n",
+    "# '1 2' , ' 4 ' , ' 7 8'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 0), match=''>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (.[a-z]+)+ => none\n",
+    "# (.[a-z]+)* => \"\"\n",
+    "\n",
+    "a = '0a2325483'\n",
+    "b = '321654684'\n",
+    "\n",
+    "p = re.compile('(.[a-z]+)+') #b에 대해서 +는 그룹이 하나 이상 있어야 하기 때문에 none이다.\n",
+    "p2 = re.compile('(.[a-z]+)*') #b에 대해 *는 그룹이 없거나 하나 이상이기 때문에 \"\"을 출력한다.\n",
+    "p2.match(b)"
+   ]
   }
  ],
  "metadata": {
